# cusp-audio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cusp.toml.example  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/spikes/: APR-19-airplay2-groups.md
src/cusp/: __init__.py  __main__.py  airplay.py  audio.py  cli.py  config.py  logging_.py  pipeline.py
tests/: conftest.py  test_airplay.py  test_audio.py  test_config.py  test_pipeline.py  test_version.py
