[project]
name = "cusp"
version = "0.1.0"
description = "Stream audio from audio input to an AirPlay receiver"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jeremy Carbaugh", email = "jeremy@jcarbaugh.com"}
]
maintainers = [
    {name = "Jeremy Carbaugh", email = "jeremy@jcarbaugh.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pyatv>=0.17.0",
    "sounddevice>=0.4.6",
    "click>=8.1",
    "tomli>=2.0;python_version<'3.11'",
]

[project.urls]
homepage = "https://github.com/apricotdotcool/cusp-audio"

[project.scripts]
cusp = "cusp.cli:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
